General fixes in MediaLibrary teasers

--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
@@ -6,7 +6,7 @@
 
     {% if externalcontent.image %}
       <div class="teaser_icon_container media-content"><a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
-        <img class="teaser_icon" src="{% version externalcontent.image.path 'thumbnail' %}" width="90" border="0"/>
+        <img class="teaser_icon" src="{% version externalcontent.image.path 'small' %}" border="0"/>
       </a></div>
     {% endif %}
 
@@ -23,15 +23,6 @@
 
     {% if externalcontent.image %}
     <br class="floating-img-clear" />
-    {% endif %}
-
-    {% if externalcontent.skip_detail %}
-    <p class="meta-content">
-      <a href="{{ externalcontent.content_url }}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
-      {% trans "Open external content"%} {% if externalcontent.new_window %}{% trans " (in new window)"%}{% endif%}
-      </a>
-    </p>
-
     {% endif %}
 
   </div>
