--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -5,7 +5,7 @@
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png" /><a href="{% url document-detail document.slug %}">{{ document.name }}</a></h2>
 
     {% if document.image %}
-      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version document.image.path 'thumbnail' %}" width="90" /></div>
+      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version document.image.path 'small' %}" /></div>
     {% endif %}
 
     {% if document.description %}
