--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
@@ -5,7 +5,7 @@
      <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/flash.png" /><a href="{% url flashmovie-detail flashmovie.slug %}">{{ flashmovie.name }}</a></h2>
 
      {% if flashmovie.image %}
-       <div class="media-content teaser_icon_container"><img class="teaser_icon" src="{% version flashmovie.image.path 'small' %}" width="135"/></div>
+       <div class="media-content teaser_icon_container"><img class="teaser_icon" src="{% version flashmovie.image.path 'small' %}"/></div>
      {% endif %}
 
      {% if flashmovie.description %}
