--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -4,6 +4,10 @@
 
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" /><a href="{% url soundtrack-detail soundtrack.slug %}">{{ soundtrack.name }}</a></h2>
 
+ {% if soundtrack.image %}
+       <div class="media-content teaser_icon_container"><img class="teaser_icon" src="{% version soundtrack.image.path 'small' %}"></div>
+     {% endif %}
+
     {% if soundtrack.description %}
       <h3 class="html-content summary">{{ soundtrack.description|smart_style }}</h3>
     {% endif %}
