--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_slideshow_item.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_slideshow_item.html
@@ -1,14 +1,14 @@
 {% extends 'medialibrary/medialibrary_slideshow_base_item.html' %}
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
 {% block wholecontent %}
-<div class="content-view externalcontent media slideshow">
+<div class="content-view externalcontent media">
   {% if view_options.show_title %}
     <h2 class="title"><a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>{{ externalcontent.name}}</a></h2>
   {% endif %}
   {% if view_options.show_image %}
     {% if externalcontent.image %}
       <div class="teaser_icon_container media-content"><a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
-        <img class="slideshow_picture" src="{% version externalcontent.image.path 'slideshow-background' %}" border="0"/></a>
+        <img class="slideshow_picture" src="{% version externalcontent.image.path view_options.visualization_mode %}" border="0"/></a>
       </div>
     {% endif %}
   {% endif %}
