--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_slideshow_base_item.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_slideshow_base_item.html
@@ -2,12 +2,12 @@
 
 {% block wholecontent %}
 {% block head %}
-<div class="content-view {{media.get_object_name}} media slideshow">
+<div class="content-view {{media.get_object_name}} media">
   {% if view_options.show_title %}
     <h2 class="title"><a href="{{media.get_absolute_url}}">{{ media.name }}</a></h2>
   {% endif %}
   {% if media.image %}
-    <div class="media-content slideshow_{{media.get_object_name}}"><img src="{% version media.image.path 'slideshow-background' %}"/></div>
+    <div class="media-content slideshow_{{media.get_object_name}}"><img class="slideshow_picture" src="{% version media.image.path view_options.visualization_mode %}"/></div>
   {% endif %}
 {% endblock head %}
 
