--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_slideshow_item.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_slideshow_item.html
@@ -1,6 +1,6 @@
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
 
-<div class="content-view staticpage media slideshow">
+<div class="content-view staticpage media">
 
     {% if view_options.show_title %}
     <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
@@ -13,7 +13,7 @@
             {% if not view_options.show_title and not view_options.show_description %}
           <img class="icon big" src="{% version staticpage.pictures.0.image.path 'big' %}" border="0"/>
             {% else %}
-          <img class="slideshow_picture" src="{% version staticpage.pictures.0.image.path 'slideshow-background' %}" border="0"/>
+          <img class="slideshow_picture" src="{% version staticpage.pictures.0.image.path view_options.visualization_mode %}" border="0"/>
             {% endif %}
         {% else %}
           <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
