--- a/cyclope/media/themes/neutronix/css/jcarousel.less
+++ b/cyclope/media/themes/neutronix/css/jcarousel.less
@@ -18,9 +18,9 @@
 */
 
 
-/*-----------------------------------------------------------------------------------------------
+/*-----------------------------------------
 DEFAULTS
------------------------------------------------------------------------------------------------*/
+------------------------------------------*/
 
 .jcarousel-skin-cyclope .jcarousel-container {
     background: @colora;
@@ -40,7 +40,12 @@ DEFAULTS
 
 .jcarousel-skin-cyclope .jcarousel-clip {
     overflow: hidden;
-    width: 550px;
+    width: 550px;}
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-clip {
+    height: 210px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-clip {
     height: 330px;}
 
 .jcarousel-skin-cyclope .jcarousel-clip-horizontal {
@@ -53,8 +58,14 @@ DEFAULTS
 
 .jcarousel-skin-cyclope .jcarousel-item {
     width: 550px;
-    height: 330px;
-    padding:0;margin:0;}
+    padding:0;
+    margin:0;}
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-item {
+    height: 210px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-item {
+    height: 330px;}
 
 .jcarousel-skin-cyclope .jcarousel-item-horizontal {
     margin-left: 0;
@@ -79,18 +90,23 @@ DEFAULTS
   color: @color-omega;}
 
 
-/*-----------------------------------------------------------------------------------------------
+/*-----------------------------------------
 HORIZONTAL BUTTONS
------------------------------------------------------------------------------------------------*/
+------------------------------------------*/
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal {
   position: absolute;
-  top: 140px;
   right: 0px;
   width: 32px;
   height: 32px;
   cursor: pointer;
   background: transparent url(../images/jcarousel/next-horizontal-right.png) no-repeat 0 0;}
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 90px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 140px;}
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:hover,
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:focus {
@@ -108,13 +124,18 @@ HORIZONTAL BUTTONS
 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
   position: absolute;
-  top: 140px;
   left: 0px;
   width: 32px;
   height: 32px;
   cursor: pointer;
   background: transparent url(../images/jcarousel/prev-horizontal-left.png) no-repeat 0 0;}
 
+.slideshow .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 90px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 140px;}
+    
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:hover, 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:focus {
     background-position: -32px 0;
@@ -193,16 +214,70 @@ HORIZONTAL BUTTONS
 */
 
 
-/* internal .slideshow item styles */
+/*-----------------------------------------
+MODE STANDAR VIEW
+------------------------------------------*/
 
 #spark .slideshow {
+  margin: 0;
+  border-bottom: none;
+  padding: 0;}
+
+#spark .slideshow img.slideshow_picture {
+  border: 3px solid @colorb;
+  float: left;
+  margin: 0 10px 0 0;
+  padding:0;
+  width: 140px;
+  .rounded-corners(6px);
+  background:@colora;}
+
+#spark .slideshow img.type_icon {
+  display:none;
+  float: right;
+  right: 10px; 
+  margin: 0;
+  padding: 0 10px 0 0;
+  position: absolute;
+  top: 10px;
+  width:20px;}
+  
+#spark .slideshow .teaser_icon_container {
+  position: relative;}
+
+#spark .slideshow .title {
+  border: medium none;
+  font-size: 1.7em !important;
+  line-height: 1.1em;
+  margin: 0;}
+
+#spark .slideshow .summary {
+  color: @color-omega !important;
+  font-size: .95em !important;
+  font-weight: 400;
+  line-height: 1.2em;
+  padding: 0 20px 0 0 !important;
+  margin:0 !important;
+  text-align: left !important;
+  z-index:4;}
+
+#spark .slideshow .summary p { 
+  padding: 0 !important;
+  margin:0 !important;
+  display:block !important;}
+
+/*-----------------------------------------
+MODE IMAGE BACKGROUND VIEW
+------------------------------------------*/
+
+#spark .slideshow-background {
   
   margin: 0;
   border-bottom: none;
   padding: 0;
   z-index:0;}
 
-#spark .slideshow img.icon {
+#spark .slideshow-background img.icon {
   border: none;
   clear: both;
   float: left;
@@ -211,7 +286,7 @@ HORIZONTAL BUTTONS
   position:absolute;
   z-index:1;}
 
-#spark .slideshow img.icon.big {
+#spark .slideshow-background img.icon.big {
   border: none;
   clear: both;
   float: left;
@@ -219,7 +294,7 @@ HORIZONTAL BUTTONS
   padding: 0;
   width: 510px;}
 
-#spark .slideshow img.type_icon {
+#spark .slideshow-background img.type_icon {
   float: left;
   left: 10px;
   margin: 0;
@@ -227,14 +302,14 @@ HORIZONTAL BUTTONS
   position: absolute;
   top: 10px;}
 
-#spark .slideshow .teaser_icon_container {
+#spark .slideshow-background .teaser_icon_container {
   position: relative;}
 
-#spark .slideshow h2.title {
+#spark .slideshow-background h2.title {
   margin:0;
   padding:15px;}
   
-#spark .slideshow .title {
+#spark .slideshow-background .title {
   border: none;
   font-size: 1.2em;
   line-height: 100%;
@@ -248,17 +323,17 @@ HORIZONTAL BUTTONS
   display:block;
   float:left;}
   
-#spark .slideshow .title a {
+#spark .slideshow-background .title a {
   color:@color-alpha;}
   
-#spark .slideshow .download_link {
+#spark .slideshow-background .download_link {
     display:block;
     clear:both;
     padding:0;
     margin:0;
     float:left;}
 
-#spark .slideshow .summary {
+#spark .slideshow-background .summary {
   color: @color-alpha !important;
   font-size: 0.8em !important;
   font-weight: 400;
@@ -271,11 +346,12 @@ HORIZONTAL BUTTONS
   bottom:0;
   z-index:4;}
 
-#spark .slideshow .summary p { 
+#spark .slideshow-background .summary p { 
   overflow:auto;
   width:520px;
   display:block !important;}
   
-#spark li { 
+#spark .slideshow-background li { 
   padding:0 !important;
   margin:0 !important;}  
+
