Fixed BlockTitle & BodyClass

--- a/cyclope/media/themes/neutronix/css/fire.less
+++ b/cyclope/media/themes/neutronix/css/fire.less
@@ -20,7 +20,7 @@
 /*-----------------------------------------------------------------------------------------------
 FIRE
 -----------------------------------------------------------------------------------------------*/
-.main .category_title .title {
+.five_elements .category_title .title {
   background:@color-alpha;
   display:block;
   color:@colorc;
@@ -29,24 +29,24 @@ FIRE
   border-bottom:1px solid @colorb;
   padding:4px;}
   
-.main .category_title .title a {
+.five_elements .category_title .title a {
   color:inherit;
   text-decoration:none;}
   
-.main .category_title .title a:hover {
+.five_elements .category_title .title a:hover {
   color:@colore;}
   
-.main #categories_navigation {
+.five_elements #categories_navigation {
   padding:4px;
   display:block;
   float:right;
   font-weight:700;}
   
-.main #categories_navigation a {
+.five_elements #categories_navigation a {
   text-decoration:none;
   color:@colorb;}
   
-.main #categories_navigation a:hover {
+.five_elements #categories_navigation a:hover {
   color:@colorc;}
 
 #fire {
