--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -22,7 +22,7 @@
  
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}</title>
+    <title>{% block title %}{%endblock%}</title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
     <link href="/rss" title="RSS" type="application/rss+xml" rel="alternate" />
