--- a/cyclope/templates/cyclope/themes/neutronix/five_elements.html
+++ b/cyclope/templates/cyclope/themes/neutronix/five_elements.html
@@ -1,8 +1,8 @@
 {% extends CYCLOPE_THEME_BASE_TEMPLATE %}
 
 {% load layout %}
-
-{% block body_class %}main{% endblock %}
+{% block title %}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
+{% block body_class %}five_elements{% endblock %}
 
 {% block page_content %}
 <div class="grid_14">
