--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -9,7 +9,7 @@
      {% endif %}
 
      {% if movieclip.description %}
-       <h3 class="html-content summary">{{ movieclip.description|smart_style }}</h3>
+       <div class="html-content summary">{{ movieclip.description|smart_style }}</div>
      {% endif %}
 
      {% include "cyclope/author_block.html" with author=movieclip.author %}
