--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
@@ -2,14 +2,14 @@
 
   <div class="content-view regularfile teaser regularfile-teaser">
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png" /><a href="{% url regularfile-detail regularfile.slug %}">{{ regularfile.name }}</a></h2>
+    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png" alt="{% trans "Regular File" %}" /><a href="{% url regularfile-detail regularfile.slug %}">{{ regularfile.name }}</a></h2>
 
     {% if regularfile.image %}
-      <div class="media-content teaser_icon_container"><img class="teaser_icon" src="{% version regularfile.image.path 'small' %}" border="0" /></div>
+      <div class="media-content teaser_icon_container"><img class="teaser_icon" src="{% version regularfile.image.path 'small' %}" alt="{% trans "Regular File" %}" border="0" /></div>
     {% endif %}
 
     {% if regularfile.description %}
-      <h3 class="html-content summary">{{ regularfile.description|smart_style }}</h3>
+      <div class="html-content summary">{{ regularfile.description|smart_style }}</div>
     {% endif %}
 
     {% include "cyclope/author_block.html" with author=regularfile.author %}
